--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<script type="text/javascript" src="../js/Navegador.js"></script>
     <script type="text/javascript" src="../js/About Us.js"></script>
+	<script type="text/javascript" src="../js/NavegadorTransicion.js"></script>
 </head>
 <body>
 	<header>
@@ -43,7 +44,7 @@
 		<div id="menuHorizontal">
 			<img id="logo" src="../img/Logo%20SAMAify.png">
 			<ul>
-				<a href="#servicios"><li>Nuestros Servicios</li></a>
+				<a href="#servicio"><li>Nuestros Servicios</li></a>
 				<a href="#virtudes"><li>Virtudes</li></a>
 				<a href="#equipo"><li>Quienes Somos</li></a>
 				<a href="#contacto"><li>Contactanos</li></a>
@@ -124,33 +125,37 @@
 			<div class="columna2">
 				<h4>Adrian Danlos</h4>
 				<p>Coordinador</p>
-				<img id="imgAdrian" class="persona" src="../img/persona1.jpg">
+				<img id="imgAdrian" class="persona" src="../img/persona1.jpeg">
 				<div class="text">
-					<p>hola buenas tardes</p>
+					<p>Encargado de guiarnos y coordinar todos los pasos
+					que tenemos que dar en el proyecto</p>
 				</div>
 			</div>
 			<div class="columna2">
 				<h4>Aritz Martinez</h4>
 				<p>Responsable de material</p>
-				<img class="persona" src="../img/persona2.jpg">
+				<img class="persona" src="../img/persona2.jpeg">
 				<div class="text">
-					<p>hola buenas tardes</p>
+					<p>Encargado de traer todo el material que nos falte, con las tareas
+					que se le asignan es muy eficaz y rapido.</p>
 				</div>
 			</div>
 			<div class="columna2">
 				<h4>Sergio Zulueta</h4>
 				<p>Planificador</p>
-				<img class="persona" src="../img/persona3.jpg">
+				<img class="persona" src="../img/persona3.jpeg">
 				<div class="text">
-					<p>hola buenas tardes</p>
+					<p>Encargado de poner una fecha limite para las cosas que tenemos que
+					hacer, responsable de todo lo que se le asigna.</p>
 				</div>
 			</div>
 			<div class="columna2">
 				<h4>Miguel Barros</h4>
 				<p>Reportero</p>
-				<img class="persona" src="../img/persona4.jpg">
+				<img class="persona" src="../img/persona4.jpeg">
 				<div class="text">
-					<p>hola buenas tardes</p>
+					<p>Encargado de actualizar y recordar las actividades que
+					tiene que hacer cada miembro.</p>
 				</div>
 			</div>
 		</div>
