--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" src="../js/Navegador.js"></script>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <script type="text/javascript" src="../js/NavegadorTransicion.js"></script>
 </head>
 <body>
     <header>
