--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -49,23 +49,24 @@
     }
     #subway-container{
         margin: 0 auto;
-        width: 480px;
+        width: 680px;
         height: 300px;
         /*overflow: hidden;*/
         position: relative;
     }
 
     #train{
-        width: 20px;
-        height: 20px;
+        width: 15px;
+        height: 15px;
         background: black;
         border-radius: 100%;
         position: absolute;
-        top: 23%;
-        left: 7%;
+        top: 64%;
+        left: 2%;
         z-index: 4000;
         animation-name: move;
-        animation-duration: 1s;
+        animation-duration: 5s;
+        animation-timing-function: ease-in-out;
     }
     li{
         top: 80px;
@@ -76,7 +77,7 @@
             left: 7%;
         }
         to {
-            left: 33%;
+            left: 66.5%;
         }
     }
 
@@ -94,20 +95,26 @@
         <div id="train"></div>
         <div class="subway-map" data-columns="12" data-rows="10" data-cellSize="40" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8">
             <ul data-color="#36AEFF" data-label="Vitoria-Gasteiz">
-                <!--<li data-coords="4.2,2"><a href="http://jqueryui.com/demos/accordion/">tranvia</a></li>-->
-                <li data-coords="1,2" data-marker="interchange">Angulema</li>
+                <li data-coords="0.5,5" data-marker="interchange">Angulema</li>
+                <li data-coords="4,5">Parlamento</li>
+                <li data-coords="8,5">Lovaina</li>
+                <li data-coords="11.5,5" data-marker="interchange">Sancho el Sabio</li>
+
+                <!--RECORRIDO CON CURVAS-->
+
+                <!--<li data-coords="1,2" data-marker="interchange">Angulema</li>
                 <li data-coords="4,2"></li>
                 <li data-coords="5,3" data-dir="E"></li>
-                <li data-coords="5,7" data-marker="@station" data-labelPos="W"></li> <!-- marker-only node -->
+                <li data-coords="5,7" data-marker="@station" data-labelPos="W"></li> &lt;!&ndash; marker-only node &ndash;&gt;
                 <li data-coords="6,4" data-dir="S" data-markerInfo="h5">Parlamento</li>
                 <li data-coords="7,4"></li>
-                <li data-coords="7.15,8" data-marker="@station" data-labelPos="E"></li>  <!-- marker-only node, moved to the right by 0.15 -->
+                <li data-coords="7.15,8" data-marker="@station" data-labelPos="E"></li>  &lt;!&ndash; marker-only node, moved to the right by 0.15 &ndash;&gt;
                 <li data-coords="8,3" data-dir="E"></li>
                 <li data-coords="8,2"></li>
                 <li data-coords="9,1" data-dir="N">Lovaina</li>
                 <li data-coords="10,2" data-dir="E" data-labelPos="E"></li>
                 <li data-coords="10,5"></li>
-                <li data-coords="9,6" data-dir="S" data-marker="interchange">Sancho el Sabio</li>
+                <li data-coords="9,6" data-dir="S" data-marker="interchange">Sancho el Sabio</li>-->
             </ul>
         </div>
         <div id="legend"></div>
