--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -1,100 +1,42 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Subway Map</title>
+    <meta charset="UTF-8">
+    <title>En Directo</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="jquery.subwayMap-0.5.2.js"></script>
     <script type="text/javascript" src="../js/tiempoReal.js"></script>
-    <style type="text/css">
-    body
-    {
-        font-family: Verdana;
-        font-size: 8pt;
-    }
-
-    /* The main DIV for the map */
-    .subway-map
-    {
-        margin: 0;
-        width: 500px;
-        height:410px;
-        background-color: white;
-    }
-
-    /* Text labels */
-    .text
-    {
-        text-decoration: none;
-        color: black;
-    }
-
-    #legend
-    {
-        float: left;
-        width: 250px;
-        height:400px;
-    }
-
-    #legend div
-    {
-        height: 25px;
-    }
-
-    #legend span
-    {
-        margin: 5px 5px 5px 0;
-    }
-    .subway-map span
-    {
-        margin: 5px 5px 5px 0;
-    }
-    #subway-container{
-        margin: 0 auto;
-        width: 680px;
-        height: 300px;
-        /*overflow: hidden;*/
-        position: relative;
-    }
-
-    #train{
-        width: 15px;
-        height: 15px;
-        background: black;
-        border-radius: 100%;
-        position: absolute;
-        top: 64%;
-        left: 2%;
-        z-index: 4000;
-        animation-name: move;
-        animation-duration: 5s;
-        animation-timing-function: ease-in-out;
-    }
-    li{
-        top: 80px;
-        left: 40px;
-    }
-    @-webkit-keyframes move {
-        from {
-            left: 7%;
-        }
-        to {
-            left: 66.5%;
-        }
-    }
-
-
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-<div id="data">
-    <p>
-        Current Position
-        <span id="Current Position"></span>
-    </p>
-</div>
+<div id="realTime-container">
+    <div id="real-time-title-container">
+        <div class="real-time-title">En directo</div>
+        <div class="real-time-title">En directo</div>
+        <div class="real-time-title">En directo</div>
+    </div>
+    <div id="data">
+        <div>
+            <p>Posición</p>
+            <span id="current-position"></span>
+        </div>
+        <div>
+            <p>Próxima parada</p>
+            <span id="target-position">Sancho el Sabio</span>
+        </div>
+        <div>
+            <p>Velocidad</p>
+            <span id="speed">10m/s</span>
+        </div>
+        <div>
+            <p>Aceleración</p>
+            <span id="acceleration">10cm/s</span>
+        </div>
+    </div>
     <div id="subway-container">
         <div id="train"></div>
         <div class="subway-map" data-columns="12" data-rows="10" data-cellSize="40" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8">
-            <ul data-color="#36AEFF" data-label="Vitoria-Gasteiz">
+            <ul data-color="#CEFAC0" data-label="Vitoria-Gasteiz">
                 <li data-coords="0.5,5" data-marker="interchange">Angulema</li>
                 <li data-coords="4,5">Parlamento</li>
                 <li data-coords="8,5">Lovaina</li>
@@ -119,8 +61,9 @@
         </div>
         <div id="legend"></div>
     </div>
-    <script type="text/javascript">
-        $(".subway-map").subwayMap({ debug: true });
-    </script>
+</div>
+<script type="text/javascript">
+    $(".subway-map").subwayMap({ debug: true });
+</script>
 </body>
 </html>
