--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -68,10 +68,9 @@
         </div>
     </div>
 
-    <p id="valores"></p>
-    <p id="contador">:="mis_datos".contador:</p>
-    <p id="velocidad">:="mis_datos".Velocidad:</p>
-    <p id="aceleracion">:="mis_datos".Aceleracion:</p>
+    <p id="contador"></p>
+    <p id="velocidad"></p>
+    <p id="aceleracion"></p>
 </div>
 
 <script type="text/javascript" src="../js/grafica.js"></script>
