--- a/src/js/leer_variable.html
+++ b/src/js/leer_variable.html
@@ -1,1 +1,3 @@
-<p>:="mis_datos".contador:</p>
+<p id="contador1">:="mis_datos".contador:</p>
+<p id="velocidad2">:="mis_datos".Velocidad:</p>
+<p id="aceleracion3">:="mis_datos".Aceleracion:</p>
