--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -72,7 +72,7 @@
     </div>
     <div id="contenidopestanas">
         <div id="cpestana1">
-            <canvas id="miGrafica" width="400" height="300" id="miGrafica"></canvas>
+            <canvas id="miGrafica" width="100%" id="miGrafica"></canvas>
         </div>
         <div id="cpestana2">
             <canvas id="miGrafica2" width="400" height="300" id="miGrafica2"></canvas>
