Grafica errores y la normal

--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -84,7 +84,7 @@
 
     <p id="contador"></p>
     <p id="velocidad"></p>
-    <p id="aceleracion"></p>
+    <p id="error"></p>
 </div>
 
     <script type="text/javascript" src="../js/grafica.js"></script>
