--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="../js/NavegadorTransicion.js"></script>
     <title>Grafica</title>
 </head>
-<body>
+<body onload="ocultarGraficas()">
 
     <header>
         <div id="logoMenu">
@@ -66,8 +66,8 @@
     <div id="pestanas">
         <ul id=lista>
             <li id="pestana1"><a href='javascript:cambiarPestanna(pestanas,pestana1);'>Velocidad</a></li>
-            <li id="pestana2"><a href='javascript:cambiarPestanna(pestanas,pestana2);'>Almacenadas</a></li>
-            <li id="pestana3"><a href='javascript:cambiarPestanna(pestanas,pestana3);'>Errores</a></li>
+            <li id="pestana2"><a href='javascript:cambiarPestanna(pestanas,pestana2);' onclick="mostrarGraficas()">Almacenadas</a></li>
+            <li id="pestana3"><a href='javascript:cambiarPestanna(pestanas,pestana3);' onclick="mostrarGraficas()">Errores</a></li>
         </ul>
     </div>
     <div id="contenidopestanas">
