Copyright bug nav solucionado

--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -38,6 +38,9 @@
 			              <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
 			            </a>
 			        </li>
+					<li id="especial">
+						<p>&copy; Copyright 2019 SAMAify</p>
+					</li>
 		        </ul>
 	        </nav>
     </header>
@@ -126,7 +129,7 @@
 				<h4>Adrian Danlos</h4>
 				<p>Coordinador</p>
 				<img id="imgAdrian" class="persona" src="../img/persona1.jpeg">
-				<div class="text">
+				<div class="quienesSomosText">
 					<p>Encargado de guiarnos y coordinar todos los pasos
 					que tenemos que dar en el proyecto</p>
 				</div>
@@ -135,7 +138,7 @@
 				<h4>Aritz Martinez</h4>
 				<p>Responsable de material</p>
 				<img class="persona" src="../img/persona2.jpeg">
-				<div class="text">
+				<div class="quienesSomosText">
 					<p>Encargado de traer todo el material que nos falte, con las tareas
 					que se le asignan es muy eficaz y rapido.</p>
 				</div>
@@ -144,7 +147,7 @@
 				<h4>Sergio Zulueta</h4>
 				<p>Planificador</p>
 				<img class="persona" src="../img/persona3.jpeg">
-				<div class="text">
+				<div class="quienesSomosText">
 					<p>Encargado de poner una fecha limite para las cosas que tenemos que
 					hacer, responsable de todo lo que se le asigna.</p>
 				</div>
@@ -153,7 +156,7 @@
 				<h4>Miguel Barros</h4>
 				<p>Reportero</p>
 				<img class="persona" src="../img/persona4.jpeg">
-				<div class="text">
+				<div class="quienesSomosText">
 					<p>Encargado de actualizar y recordar las actividades que
 					tiene que hacer cada miembro.</p>
 				</div>
