--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -38,6 +38,9 @@
                         <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
                     </a>
                 </li>
+                <li id="especial">
+                    <p>&copy; Copyright 2019 SAMAify</p>
+                </li>
             </ul>
         </nav>
     </header>
