--- a/src/html/leer_variable.html
+++ b/src/html/leer_variable.html
@@ -3,3 +3,7 @@
 <span id="v2">:="mis_datos".Current speed:</span>
 <span id="v3">:="mis_datos".Acceleration:</span>
 <span id="v4">:="mis_datos".Target position:</span>
+
+<p id="contador1">:="mis_datos".Current position:</p>
+<p id="velocidad2">:="mis_datos".Current speed:</p>
+<p id="error3">:="mis_datos".Error:</p>
