variables tia portal

--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -1,6 +1,6 @@
-<!-- AWP_In_Variable Name='"mis_datos".contador' -->
-<!-- AWP_In_Variable Name='"mis_datos".Aceleracion' -->
-<!-- AWP_In_Variable Name='"mis_datos".Velocidad' -->
+<!-- AWP_In_Variable Name='"mis_datos".Current position' -->
+<!-- AWP_In_Variable Name='"mis_datos".Current speed' -->
+<!-- AWP_In_Variable Name='"mis_datos".Error' -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
