--- a/src/html/leer_variable.html
+++ b/src/html/leer_variable.html
@@ -1,9 +1,12 @@
-<!-- AWP_In_Variable Name='"mis_datos".Current position B' -->
-<!-- AWP_In_Variable Name='"mis_datos".speed' -->
+<!-- AWP_In_Variable Name='"mis_datos".Current position' -->
+<!-- AWP_In_Variable Name='"mis_datos".Current speed' -->
+<!-- AWP_In_Variable Name='"mis_datos".Acceleration' -->
+<!-- AWP_In_Variable Name='"mis_datos".Target position' -->
+
 <span id="v2">:="mis_datos".Current speed:</span>
 <span id="v3">:="mis_datos".Acceleration:</span>
 <span id="v4">:="mis_datos".Target position:</span>
 
-<p id="contador1">:="mis_datos".Current position:</p>
-<p id="velocidad2">:="mis_datos".Current speed:</p>
+<p id="contador1">:="mis_datos".Current speed:</p>
+<p id="velocidad2">:="mis_datos".Current position:</p>
 <p id="error3">:="mis_datos".Error:</p>
