--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -4,6 +4,7 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+	<link rel="icon" href="../img/logo.png">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<script type="text/javascript" src="../js/Navegador.js"></script>
     <script type="text/javascript" src="../js/About Us.js"></script>
@@ -13,13 +14,13 @@
 	<header>
 			<div id="logoMenu">
 					<img id="imgMenu" src="../img/menu.png">
-			   		 <a id="tituloMenu" href="">SAMAify</a>
+			   		 <a id="tituloMenu" href="index.html">SAMAify</a>
 		        	<hr>
 		   	</div>
 		    <nav>
 			    <ul>
 			         <li>
-			            <a href="index.html">
+			            <a href="subwayMap.htm">
 			             	<p><img src="../img/tranvia.png"> animacion</p>
 			            </a>
 			        </li>
@@ -177,10 +178,10 @@
 		</div>
 		<footer>
 			<div class="horizontal2"></div>
-			<a href=""><img src="../img/twitter.png"></a>
-			<a href=""><img src="../img/facebook.png"></a>
-			<a href=""><img src="../img/instagram.png"></a>
-			<a href=""><img src="../img/youtube.png"></a>
+			<a href="https://twitter.com/AifySam"><img src="../img/twitter.png"></a>
+			<a href="https://drive.google.com/drive/u/1/folders/0AI-OCRI385AvUk9PVA"><img src="../img/drive.png"></a>
+			<a href="https://www.instagram.com/samaify/?hl=es"><img src="../img/instagram.png"></a>
+			<a href="https://www.youtube.com/channel/UCf7AQbCKXE-4mW40tK9vHIA"><img src="../img/youtube.png"></a>
 			<a href="https://github.com/SAMAifyWEB/RETO1"><img src="../img/github.png"></a>
 			<div class="horizontal2"></div>
 		</footer>
