--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="icon" href="../img/logo.png">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" src="../js/Navegador.js"></script>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -13,13 +14,13 @@
     <header>
         <div id="logoMenu">
             <img id="imgMenu" src="../img/menu.png">
-            <a id="tituloMenu" href="">SAMAify</a>
+            <a id="tituloMenu" href="index.html">SAMAify</a>
             <hr>
         </div>
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="subwayMap.htm">
                         <p><img src="../img/tranvia.png"> animacion</p>
                     </a>
                 </li>
