--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="icon" href="../img/logo.png">
     <script type="text/javascript" src="../js/Chart.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" src="../js/Navegador.js"></script>
@@ -18,13 +19,13 @@
     <header>
         <div id="logoMenu">
             <img id="imgMenu" src="../img/menu.png">
-            <a id="tituloMenu" href="">SAMAify</a>
+            <a id="tituloMenu" href="index.html">SAMAify</a>
             <hr>
         </div>
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="subwayMap.htm">
                         <p><img src="../img/tranvia.png"> animacion</p>
                     </a>
                 </li>
