--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,7 @@
             RT Train
         </title>
         <link href="../css/stylesIndex.css" rel="stylesheet" type="text/css"/>
+        <link rel="icon" href="../img/logo.png">
         <!--https://cors-anywhere.herokuapp.com/-->
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
