ultimos hotfix variados

--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -22,7 +22,7 @@
     <div id="data">
         <div>
             <p>Posición</p>
-            <span id="current-position"></span>
+            <span id="current-position">Angulema</span>
         </div>
         <div>
             <p>Próxima parada</p>
