--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="jquery.subwayMap-0.5.2.js"></script>
     <script type="text/javascript" src="../js/tiempoReal.js"></script>
+    <script type="text/javascript" src="../js/Navegador.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
