loading bar color

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -74,7 +74,7 @@
                         <div class="info">
                             <div class="text-container-parent">
                                 <div class="title-container">Gráficas</div>
-                                <div class="description-container">Visualización de múltiples datos sobre el tranvía a través de gráficas de líneas y barras tanto datos a tiempo real como almacenados.</div>
+                                <div class="description-container"><p>Visualización de múltiples datos sobre el tranvía a través de gráficas de líneas y barras tanto datos a tiempo real como almacenados.</p></div>
                             </div>
                             <div class="link-container-parent">
                                 <div class="link-container">
@@ -96,7 +96,7 @@
                         <div class="info">
                             <div class="text-container-parent">
                                 <div class="title-container">Interacción</div>
-                                <div class="description-container">Interfaz para testear y modificar algunos de los parámetros del tranvía y visualizar la respuesta del mismo a tiempo real.</div>
+                                <div class="description-container"><p>Interfaz para testear y modificar algunos de los parámetros del tranvía y visualizar la respuesta del mismo a tiempo real.</p></div>
                             </div>
                             <div class="link-container-parent">
                                 <div class="link-container">
