--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>En Directo</title>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
+    <script type="text/javascript" src="../js/jQuery.js"></script>
     <script type="text/javascript" src="jquery.subwayMap-0.5.2.js"></script>
     <script type="text/javascript" src="../js/tiempoReal.js"></script>
     <script type="text/javascript" src="../js/Navegador.js"></script>
