--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+	<script type="text/javascript" src="../js/jQuery.js"></script>
 	<link rel="icon" href="../img/logo.png">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<script type="text/javascript" src="../js/Navegador.js"></script>
