--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="icon" href="../img/logo.png">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="../js/jQuery.js"></script>
     <script type="text/javascript" src="../js/Navegador.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="jquery.subwayMap-0.5.2.js"></script>
     <script type="text/javascript" src="../js/tiempoReal.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet"/>
