--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="icon" href="../img/logo.png">
     <script type="text/javascript" src="../js/Chart.js"></script>
-    <script type="text/javascript" src="../js/jQuery.js"></script>
+    <!--<script type="text/javascript" src="../js/jQuery.js"></script> -->
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" src="../js/Navegador.js"></script>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
