--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -178,11 +178,11 @@
 		</div>
 		<footer>
 			<div class="horizontal2"></div>
-			<a href="https://twitter.com/AifySam"><img src="../img/twitter.png"></a>
-			<a href="https://drive.google.com/drive/u/1/folders/0AI-OCRI385AvUk9PVA"><img src="../img/drive.png"></a>
-			<a href="https://www.instagram.com/samaify/?hl=es"><img src="../img/instagram.png"></a>
-			<a href="https://www.youtube.com/channel/UCf7AQbCKXE-4mW40tK9vHIA"><img src="../img/youtube.png"></a>
-			<a href="https://github.com/SAMAifyWEB/RETO1"><img src="../img/github.png"></a>
+			<a href="https://twitter.com/AifySam" target="_blank"><img src="../img/twitter.png"></a>
+			<a href="https://drive.google.com/drive/u/1/folders/0AI-OCRI385AvUk9PVA" target="_blank"><img src="../img/drive.png"></a>
+			<a href="https://www.instagram.com/samaify/?hl=es" target="_blank"><img src="../img/instagram.png"></a>
+			<a href="https://www.youtube.com/channel/UCf7AQbCKXE-4mW40tK9vHIA" target="_blank"><img src="../img/youtube.png"></a>
+			<a href="https://github.com/SAMAifyWEB/RETO1" target="_blank"><img src="../img/github.png"></a>
 			<div class="horizontal2"></div>
 		</footer>
 		<p id="textoFooter">Licensed by SAMAify</p>
