--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -42,10 +42,8 @@
                     <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
                 </a>
             </li>
-            <li id="especial">
-                <p>&copy; Copyright 2019 SAMAify</p>
-            </li>
         </ul>
+        <p id="copyright">&copy; Copyright 2019 SAMAify</p>
     </nav>
 </header>
 <div id="realTime-container">
