--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="../js/Navegador.js"></script>
     <script type="text/javascript" src="../js/About Us.js"></script>
 	<script type="text/javascript" src="../js/NavegadorTransicion.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet"/>
 </head>
 <body>
 	<header>
@@ -39,10 +40,8 @@
 			              <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
 			            </a>
 			        </li>
-					<li id="especial">
-						<p>&copy; Copyright 2019 SAMAify</p>
-					</li>
 		        </ul>
+				<p id="copyright">&copy; Copyright 2019 SAMAify</p>
 	        </nav>
     </header>
 		<div id="menuHorizontal">
