--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -46,10 +46,8 @@
                         <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
                     </a>
                 </li>
-                <li id="especial">
-                    <p>&copy; Copyright 2019 SAMAify</p>
-                </li>
             </ul>
+            <p id="copyright">&copy; Copyright 2019 SAMAify</p>
         </nav>
     </header>
 <div class="content" id="modificadores">
