--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -7,6 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sandbox</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="icon" href="../img/logo.png">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
