--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>En Directo</title>
+    <meta charset="UTF-8">
     <script type="text/javascript" src="../js/jQuery.js"></script>
     <script type="text/javascript" src="jquery.subwayMap-0.5.2.js"></script>
     <script type="text/javascript" src="../js/tiempoReal.js"></script>
