--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/styles.css">
 	<script type="text/javascript" src="../js/jQuery.js"></script>
 	<link rel="icon" href="../img/logo.png">
